[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "test-lib"
version = "0.1"
description = "Test python lib"
packages = [
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.6.0"

[tool.poetry.dev-dependencies]
pyre-check = "^0.0.46"
